--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -16,5 +16,8 @@ code {
 }
 
 img {
-    width: 400px
+    width: 350px;
+    border: 1px solid black;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    
 }
